# hddm_r

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  publish.yml
actions/: build_wheels.yml  publish.yml  upload_all.yml
gluex/hddm_r/: rest.xml
gluex/xrootd_client/: __init__.py
scripts/: local_test_build.sh
