[build-system]
requires = ["setuptools >= 38.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hddm_r"
version = "1.0"
requires-python = ">= 3.6"
authors = [
  {name = "Richard T. Jones", email = "richard.t.jones@uconn.edu"},
]
maintainers = [
  {name = "Richard T. Jones", email = "richard.t.jones@uconn.edu"},
]
description = "methods for reading and writing GlueX simulated event data"
readme = "README.md"
license = {text = "MIT License"}
keywords = ["hddm", "GlueX", "Gluex", "gluex", "hdgeant4", "hdgeant"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: high school and college science students",
  "Topic :: Software Development :: Scientific Data Analysis",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
]

[project.urls]
Homepage = "https://github.com/rjones30/hddm_r"
Documentation = "https://github.com/rjones30/hddm_r"
Repository = "https://github.com/rjones30/hddm_r"
Issues = "https://github.com/rjones30/hddm_r/issues"
Changelog = "https://github.com/rjones30/hddm_r/issues/main/CHANGELOG.md"
