[build-system]
requires = ["setuptools >= 64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gluex.hddm_r"
version = "2.5.3"
requires-python = ">= 3.8"
authors = [
  {name = "Richard T. Jones", email = "richard.t.jones@uconn.edu"},
]
maintainers = [
  {name = "Richard T. Jones", email = "richard.t.jones@uconn.edu"},
]
description = "methods for reading and writing GlueX reconstructed event data"
readme = "README.md"
license = {text = "MIT"}
keywords = ["hddm", "GlueX", "Gluex", "gluex", "hdgeant4", "hdgeant"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
  "Programming Language :: Python",
]

[project.urls]
Homepage = "https://github.com/rjones30/hddm_r"
Documentation = "https://github.com/rjones30/hddm_r"
Repository = "https://github.com/rjones30/hddm_r"
Issues = "https://github.com/rjones30/hddm_r/issues"
Changelog = "https://github.com/rjones30/hddm_r/issues/main/CHANGELOG.md"
